update to JDK17 update SpringBoot 2.7.2 update openLayers to 6.14.1 update httpComponents to 5.1.3

--- a/osm-proxy-wildfly/src/main/webapp/index.html
+++ b/osm-proxy-wildfly/src/main/webapp/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./webjars/openlayers/6.4.2/ol.css" type="text/css">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
     .map {
-      height: 800px;
+      height: 100%;
       width: 100%;
     }
   </style>
@@ -13,7 +18,7 @@
   <title>Simple Map</title>
 </head>
 <body>
-<div id="map" class="map" />
+<div id="map" class="map"></div>
 <script type="text/javascript">
   var map = new ol.Map({
     target: 'map',
