--- a/osm-proxy-spring/src/main/resources/static/index.html
+++ b/osm-proxy-spring/src/main/resources/static/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/webjars/openlayers/6.4.2/ol.css" type="text/css">
+  <link rel="stylesheet" href="/webjars/openlayers/6.14.1/ol.css" type="text/css">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
     .map {
-      height: 800px;
+      height: 100%;
       width: 100%;
     }
   </style>
-  <script src="/webjars/openlayers/6.4.2/ol.js"></script>
+  <script src="/webjars/openlayers/6.14.1/ol.js"></script>
   <title>Simple Map</title>
 </head>
 <body>
-<div id="map" class="map" />
+<div id="map" class="map"></div>
 <script type="text/javascript">
   var map = new ol.Map({
     target: 'map',
